# workflower

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  analisi-progettazione.md  deploy.env.example  docker-compose.yml  fly.toml  mockup.html  piano-implementazione-fase2.md  piano-implementazione-fase3.md  piano-implementazione.md  render.yaml
backend/: pyproject.toml
backend/app/: fixtures.py  fixtures_docs.py  main.py  seed.py  seed_data.py
backend/app/api/: __init__.py  ask.py  auth.py  cantieri.py  dashboard.py  dataset.py  deps.py  diagnoses.py  documents.py  entities.py  issues.py  logs.py  reports.py  review.py  samples.py  toolsmith.py  workflows.py
backend/app/core/: auth.py  classificatore.py  codebase.py  collega.py  consolida.py  dal.py  dataset.py  diagnostico.py  eval_t3.py  gateway.py  golden.py  improver.py  interroga.py  logbook.py  pytools.py  report.py  rules.py  runtime.py  sandbox.py  toolsmith.py  tracer.py  views.py
backend/app/core/tools/: __init__.py  base.py  computo.py  ocr_pdf.py  ricerca.py  salva_bozza.py
backend/app/models/: envelope.py  issue.py
backend/app/seed_assets/config/: views.sql
backend/app/seed_assets/samples/: index.json
backend/app/seed_assets/schemas/: cantiere.schema.json  computo.schema.json  cronoprogramma.schema.json  ddt.schema.json  documento.schema.json  fattura.schema.json  fornitore.schema.json  lavorazione.schema.json  materiale.schema.json  mezzo.schema.json  pozzetto.schema.json  (+3 more)
backend/tests/: aiuti.py  conftest.py  fake_ask.py  fake_diagnostico.py  fake_improver.py  fake_llm.py  fake_m17.py  fake_toolsmith.py  simulazione.py  test_admin_api.py  test_ask.py  test_auth.py  test_classificatore.py  test_computo_scostamento.py  test_concurrency.py  test_consolida.py  test_consolida_tool.py  test_dal.py  test_dataset.py  test_ddt_e2e.py  test_diagnostico.py  test_documents_api.py  test_domini_edge.py  test_entita_m20.py  test_entities_api.py  test_escalation_t3.py  test_eval_t3.py  test_fixtures.py  test_gateway.py  test_improve_admin.py  test_improver_e2e.py  test_logbook.py  test_op_no_jargon.py  test_pytools.py  test_rbac.py  test_registri_m21.py  test_registro.py  test_report.py  test_riferimenti_nullable.py  test_rules.py  (+10 more)
(+71 files in other folders)
