[project]
name = "workflower-backend"
version = "0.1.0"
description = "Workflower — backend FastAPI (sistema LLM-driven per controllo costi cantieri)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "jsonschema>=4.23",
    "GitPython>=3.1.43",
    "duckdb>=1.1",
    # <1.92: dalla 1.92 il pacchetto compila un modulo Rust (niente wheel Windows)
    "litellm>=1.52,<1.92",
    "pymupdf>=1.24",
    "PyYAML>=6.0",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "reportlab>=4.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["seed_assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# l'idioma FastAPI `parametro = Depends(...)` non è una chiamata nel default "vera"
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.Query"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
